--- a/src/ImgProc/UI/Makefile.in
+++ b/src/ImgProc/UI/Makefile.in
@@ -328,8 +328,8 @@ AM_CXXFLAGS = -fPIC  -fpermissive -g -O0 -std=c++11 -Wl,-E \
             -I  ../../../Modules/Lua/include \
             -I  ../../../Modules/tbus/libtbus/include \
             -I  ../Comm/ImgReg/Recognizer \
-            -I  /usr/include/python3.5 \
-            -L  /usr/lib/python3.5/config-3.5m-x86_64-linux-gnu \
+            -I  /usr/include/python3.7m \
+            -L  /usr/lib/python3.7/config-3.7m-x86_64-linux-gnu/ \
             -L  ../../../Modules/Json/jsoncpp-master/build/release/src/lib_json \
             -I  ../ \
             -L  /usr/local/lib \
