--- a/tools/SDKTool/cfg/SDKTool.ini
+++ b/tools/SDKTool/cfg/SDKTool.ini
@@ -1,14 +1,14 @@
 [debug]
 flag=False
-debug=GameReg
+debug=UI
 ;GameReg or UI
-mode=image
+mode=phone
 ;video or  phone or image
 
 [configure]
-path=D:\GitRepo\game_ai_sdk\bin
-videoPath=D:\sdk_cfg\1560910445_ui.avi
-imagePath=D:\test\Image\1.png
+path=/home/xdien/workspace/GameAISDK
+videoPath=/home/xdien/workspace/GameAISDK/video/560910445_ui.avi
+imagePath=/home/xdien/workspace/GameAISDK/Image/1.png
 ;useage for "image" mode
 fps = 0.1
 
