fix project path

--- a/src/AIClient/aiclient/cfg/device_cfg/device.ini
+++ b/src/AIClient/aiclient/cfg/device_cfg/device.ini
@@ -1,7 +1,7 @@
 [device]
 use_env_variable = 0
 device_type = Android
-platform = Local
+platform = WeTest
 long_edge = 1280
 max_restart_time = 300
 
