--- a/src/ImgProc/UI/Makefile.in
+++ b/src/ImgProc/UI/Makefile.in
@@ -255,7 +255,7 @@ INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBDARKNET = @LIBDARKNET@
 LIBOBJS = @LIBOBJS@
-LIBS = $(UIRECOGNIZELIBFLAG) $(LIBDARKNET) -ljsoncpp -lpython3.5 -Wl,-Bdynamic
+LIBS = -L/usr/local/lib64 $(UIRECOGNIZELIBFLAG) $(LIBDARKNET) -ljsoncpp -L/usr/lib64 -lpython3.8 -lcrypt -lpthread -ldl  -lutil -lm -Wl,-Bdynamic
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -328,11 +328,11 @@ AM_CXXFLAGS = -fPIC  -fpermissive -g -O0 -std=c++11 -Wl,-E \
             -I  ../../../Modules/Lua/include \
             -I  ../../../Modules/tbus/libtbus/include \
             -I  ../Comm/ImgReg/Recognizer \
-            -I  /usr/include/python3.7m \
-            -L  /usr/lib/python3.7/config-3.7m-x86_64-linux-gnu/ \
+            -I  /usr/include/python3.8 \
+            -L  /usr/lib/python3.8/config-3.8-x86_64-linux-gnu/ \
             -L  ../../../Modules/Json/jsoncpp-master/build/release/src/lib_json \
             -I  ../ \
-            -L  /usr/local/lib \
+            -L  /usr/local/lib64 \
             -L ../GameRecognize/Lib\
             -D USE_HOG_PREDICTION \
             -D LINUX \
