Clean the project, temporarily remove openai due to a lot of hardcode

--- a/tools/SDKTool/project/TTKP/cfg/task/ui/UIConfig.json
+++ b/tools/SDKTool/project/TTKP/cfg/task/ui/UIConfig.json
@@ -10,7 +10,7 @@
             "name": "fh",
             "desc": "",
             "actionType": "click",
-            "imgPath": "data/KPIM/HallUI_fh_5.jpg",
+            "imgPath": "data/images/HallUI_fh_5.jpg",
             "keyPoints": 5,
             "checkSameFrameCnt": 5,
             "template": 1,
@@ -18,6 +18,7 @@
             "y": 628,
             "w": 168,
             "h": 57,
+            "templateThreshold": 0.7,
             "actionX": 888,
             "actionY": 658,
             "actionThreshold": 0.7,
@@ -31,7 +32,7 @@
             "name": "start",
             "desc": "",
             "actionType": "click",
-            "imgPath": "data/KPIM/StartUI_start_5.jpg",
+            "imgPath": "data/images/StartUI_start_5.jpg",
             "keyPoints": 5,
             "checkSameFrameCnt": 5,
             "template": 1,
@@ -39,6 +40,7 @@
             "y": 601,
             "w": 245,
             "h": 79,
+            "templateThreshold": 0.7,
             "actionX": 924,
             "actionY": 641,
             "actionThreshold": 0.7,
@@ -53,7 +55,7 @@
             "id": 1,
             "name": "over",
             "desc": "",
-            "imgPath": "data/KPIM/OverUI_over_4.jpg",
+            "imgPath": "data/images/OverUI_over_4.jpg",
             "actionType": "click",
             "x": 335,
             "y": 483,
